syntax = "proto3";

option go_package = "./;user";

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns(LoginResponse) {}
  rpc GetUserInfo(UserInfoRequest) returns(UserInfoResponse) {}
}

message UserInfoRequest {
  string user_name = 1;
}

message UserInfoResponse {
  int64 id = 1;
  string user_name = 2;
  string first_name = 3;
}

message RegisterRequest {
  string user_name = 1;
  string first_name = 2;
  string pwd = 3;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string user_name = 1;
  string pwd = 2;
}

message LoginResponse {
  bool is_success = 1;
}